No mixed contents (http/https)

--- a/src/_thread_colors.scss
+++ b/src/_thread_colors.scss
@@ -72,10 +72,7 @@ input[type="text"]{
 select {
   border:1px solid #000!important;
   color: grey!important;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background: transparent url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") no-repeat right;
-  padding-right:14px;
+  background-color: transparent;
 }
 
 .sceditor-container{
