--- a/src/beste-style.scss
+++ b/src/beste-style.scss
@@ -1,5 +1,12 @@
 @charset "utf-8";
 
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/fonts/fontawesome-webfont.woff2?v=4.6.3') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @import "forum_colors",
   "forum_thread",
   "info",
