Fixed color of active navigation item

--- a/src/_main.scss
+++ b/src/_main.scss
@@ -11,7 +11,7 @@ input, select {
 }
 
 .navigation {
-  &, &.active {
+  &, .active {
     color: #ccc !important;
     margin-bottom: 10px !important;
   }
